changing npm name to blocks.js (instead of blocks-js)

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"name":"blocks-js",
+{"name":"blocks.js",
  "description": "A library for building and styling web components in pure-javascript.",
  "keywords": ["web", "components", "html", "css", "style"],
  "version":"0.9.10",
