--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {"name":"blocks.js",
  "description": "A library for building and styling web components in pure-javascript.",
  "keywords": ["web", "components", "html", "css", "style"],
- "version":"0.9.10",
+ "version":"0.9.11",
  "main": "src/Block.js",
  "contributors": [
     "Billy Tetrud <bitetrudpublic@gmail.com> (https://github.com/fresheneesz/)",
@@ -20,7 +20,7 @@
     "observe": "",
     "trimArguments":"https://github.com/fresheneesz/trimArguments/archive/c9c023c9ff1e0aec4b67370a80a92dacadcf8b11.tar.gz",
     "colors":"",
-    "hashmap": "",
+    "hashmap": "2.0.1",
     "eventemitter2": ""
  },
  "devDependencies": {
