--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {"name":"blocks.js",
  "description": "A library for building and styling web components in pure-javascript.",
- "keywords": ["web", "components", "html", "css", "style"],
+ "keywords": ["web", "components", "html", "css", "style", "view", "react", "angular", "blocks"],
  "version":"1.1.6",
  "main": "src/Block.js",
  "contributors": [
