--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-{"name":"blocks.js",
- "description": "A library for building and styling web components in pure-javascript.",
+{"name":"Gem.js",
+ "description": "A view library for building and styling web components in pure-javascript.",
  "keywords": ["web", "components", "html", "css", "style", "view", "react", "angular", "blocks", "application"],
- "version":"1.1.9",
- "main": "src/Block.js",
+ "version":"2.0.0",
+ "main": "src/Gem.js",
  "contributors": [
     "Billy Tetrud <bitetrudpublic@gmail.com> (https://github.com/fresheneesz/)",
     "Robbert Wijtman (https://github.com/Bucky24)"
@@ -13,7 +13,7 @@
  },
  "repository": {
    "type": "git",
-   "url": "git://github.com/Tixit/blocks.js"
+   "url": "git://github.com/Tixit/gem.js"
  },
  "dependencies":{
     "proto": ">=1.0.17",
@@ -26,7 +26,7 @@
  },
  "devDependencies": {
     "deadunit":"5.1.12",
-    "build-modules":"2.0.5",
+    "build-modules":"2.0.6",
     "async-future":"",
     "colors":"",
     "requirejs": ""
